<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_firebug"
            android:title="@string/firebug" />
        <item
            android:id="@+id/nav_toolhawk"
            android:title="@string/toolhawk" />
    </group>

    <item
        android:id="@+id/nav_sync"
        app:actionLayout="@layout/layout_sync"
        tools:ignore="MenuTitle" />


    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_deviceinfo"
                android:icon="@drawable/ic_device_info_new"
                android:title="@string/device_info" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_new"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
