<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login.LoginActivity">

    <ImageView
        android:id="@+id/ivCover"
        android:layout_width="0dp"
        android:layout_height="236dp"
        android:contentDescription="@string/login_cover"
        android:scaleType="fitXY"
        android:src="@drawable/login_cover"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/et_bottom_line"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/password_icon"
        android:ems="10"
        android:hint="@string/password_str"
        android:inputType="textPassword"
        android:maxLength="7"
        android:textColorHint="@color/veryLightGrey"
        app:layout_constraintLeft_toLeftOf="@+id/etEmail"
        app:layout_constraintRight_toRightOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:drawableLeft="@drawable/password_icon" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/et_bottom_line"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/username_icon"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLength="16"
        android:textColorHint="@color/veryLightGrey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCover"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:drawableLeft="@drawable/username_icon" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_selector"
        android:text="@string/login_str"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/etPassword"
        app:layout_constraintRight_toRightOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sync_after_login"
        app:layout_constraintLeft_toLeftOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <ToggleButton
        android:id="@+id/tbSync"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/toggle_button"
        android:text="@string/togglebutton"
        android:textOff=""
        android:textOn=""
        app:layout_constraintRight_toRightOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="23dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ets_logo"
        android:src="@drawable/gd_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:text="@string/account_login"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/ivCover"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/enter_your_details_below"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_constraintRight_creator="1"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="223dp"
        android:layout_height="99dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/ets_logo"
        android:src="@drawable/ets_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/ivCover"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
