<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ets.gd.Fragments.AssetInformationFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ltvTagID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/tvTagID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/txt_tagID"
                    android:maxLines="1"
                    android:paddingLeft="12dp" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rlInspType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ltvTagID"
                android:layout_marginTop="15dp">

                <Spinner
                    android:id="@+id/spDeviceType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:background="@drawable/sp_bg_new"
                    android:paddingBottom="10dp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlStatusCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlInspType"
                android:layout_marginTop="28dp">

                <Spinner
                    android:id="@+id/spManufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:background="@drawable/sp_bg_new"
                    android:paddingBottom="10dp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlInspectionResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlStatusCode"
                android:layout_marginTop="28dp">


                <Spinner
                    android:id="@+id/spModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:background="@drawable/sp_bg_new"
                    android:paddingBottom="10dp" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lSrNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlInspectionResult"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/tvSrNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/txt_serialNo"
                    android:maxLines="1"
                    android:paddingLeft="12dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lMfgDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lSrNo"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="0dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/tvMfgDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/txt_mfg_date"
                    android:maxLines="1"
                    android:paddingLeft="12dp" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rlVendor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lMfgDate"
                android:layout_marginTop="15dp">

                <Spinner
                    android:id="@+id/spVendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:background="@drawable/sp_bg_new"
                    android:paddingBottom="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlAgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlVendor"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="28dp">

                <Spinner
                    android:id="@+id/spAgent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:background="@drawable/sp_bg_new"
                    android:paddingBottom="10dp" />
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
